folderPath and name are now indexed as lowerCase
Content is already indexed case insensitive, but names and folderPath were not.

close #360